--- a/projects-wip.html
+++ b/projects-wip.html
@@ -1,27 +1,34 @@
 <html lang="en">
+    <head>
+        <link type="text/css" rel="stylesheet" href="static/css/style.css" />
+        <link
+            type="text/css"
+            rel="stylesheet"
+            href="static/css/atom-one-dark-reasonable.css"
+        />
+        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+        <script>
+            hljs.initHighlightingOnLoad()
+        </script>
+        <script src="static/js/include.js"></script>
 
-<head>
-    <link type="text/css" rel="stylesheet" href="static/css/style.css">
-    <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
-    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    <script src="static/js/include.js"></script>
+        <meta charset="utf-8" />
+        <title>Mehvix | Projects</title>
+        <style>
+            :root {
+                --outside-bg-color: #600992;
+                --inside-bg-color: #cdd8df;
+            }
+        </style>
+    </head>
 
-    <meta charset="utf-8">
-    <title>Mehvix | Projects</title>
-    <style>
-        :root {
-            --outside-bg-color: #600992;
-            --inside-bg-color: #cdd8df;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="box">
-        <div class="nav">
-            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Projects</a>
-        </div>
+    <body>
+        <div class="box">
+            <div class="nav">
+                <a href="./index.html">~</a>/<a href="" class="inverse-bg"
+                    >Projects</a
+                >
+            </div>
 
             <article>
                 ---
@@ -29,10 +36,12 @@
                 <table>
                     <tr>
                         <td class="projects-image">
-                            <img src="static/media/projects/synapsbot-avatar.jpg">
+                            <img
+                                src="static/media/projects/synapsbot-avatar.jpg"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>Synaps Bot</b><br>
+                            <b>Synaps Bot</b><br />
                             <code class="tags-py">python</code>
                         </td>
                     </tr>
@@ -44,12 +53,14 @@
 
                     <tr>
                         <td class="projects-image">
-                            <img style="display: block;" src="static/media/projects/aoe2counters.jpg">
+                            <img
+                                style="display: block"
+                                src="static/media/projects/aoe2counters.jpg"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>Age of Empires Counter List</b><br>
+                            <b>Age of Empires Counter List</b><br />
                             <code class="tags-sheet">sheets</code>
-
                         </td>
                     </tr>
 
@@ -73,12 +84,14 @@
 
                     <tr>
                         <td class="projects-image">
-                            <img style="display: block;" src="static/media/projects/greenwallet.png">
+                            <img
+                                style="display: block"
+                                src="static/media/projects/greenwallet.png"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>Green Wallet</b><br>
+                            <b>Green Wallet</b><br />
                             <code class="tags-webdev">webdev</code>
-
                         </td>
                     </tr>
 
@@ -89,12 +102,14 @@
 
                     <tr>
                         <td class="projects-image">
-                            <img style="display: block;" src="static/media/projects/.png">
+                            <img
+                                style="display: block"
+                                src="static/media/projects/.png"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>ApplicationConfigs</b><br>
+                            <b>ApplicationConfigs</b><br />
                             <code class="tags-py">python</code>
-
                         </td>
                     </tr>
 
@@ -105,14 +120,16 @@
 
                     <tr>
                         <td class="projects-image">
-                            <img style="display: block;" src="static/media/projects/nextcloudicon.png">
+                            <img
+                                style="display: block"
+                                src="static/media/projects/nextcloudicon.png"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>Server</b><br>
+                            <b>Server</b><br />
                             <code class="tags-php">php</code>
                             <code class="tags-shell">shell</code>
                             <code class="tags-misc">misc</code>
-
                         </td>
                     </tr>
 
@@ -123,12 +140,14 @@
 
                     <tr>
                         <td class="projects-image">
-                            <img style="display: block;" src="static/media/projects/redir.JPG">
+                            <img
+                                style="display: block"
+                                src="static/media/projects/redir.JPG"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>Search Engine Redirect</b><br>
+                            <b>Search Engine Redirect</b><br />
                             <code class="tags-javascript">javascript</code>
-
                         </td>
                     </tr>
 
@@ -139,32 +158,35 @@
 
                     <tr>
                         <td class="projects-image">
-                            <img style="display: block;" src="static/media/projects/presence.JPG">
+                            <img
+                                style="display: block"
+                                src="static/media/projects/presence.JPG"
+                            />
                         </td>
                         <td class="projects-text">
-                            <b>Discord Application Presence</b><br>
+                            <b>Discord Application Presence</b><br />
                             <code class="tags-py">python</code>
                             <code class="tags-shell">shell</code>
-
                         </td>
                     </tr>
-
                 </table>
             </article>
 
-
             <div id="footer">
-                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-                ETH / <a
-                    href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74">0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a><br>
+                BTC /
+                <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1"
+                    >15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a
+                ><br />
+                ETH /
+                <a href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74"
+                    >0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a
+                ><br />
 
                 <script>
                     document.write(new Date().getFullYear())
                 </script>
                 - Max Vogel
             </div>
-
         </div>
-</body>
-
+    </body>
 </html>
