--- a/404.html
+++ b/404.html
@@ -1,42 +1,56 @@
 <html lang="en">
+    <head>
+        <link href="/static/css/style.css" rel="stylesheet" />
+        <script src="static/js/include.js"></script>
 
-<head>
-    <link href="/static/css/style.css" rel="stylesheet">
-    <script src="static/js/include.js"></script>
+        <meta charset="utf-8" />
+        <title>Mehvix | 404</title>
+        <style>
+            :root {
+                --outside-bg-color: #c2ba00;
+                --inside-bg-color: #ffffff;
+            }
+        </style>
+    </head>
 
-    <meta charset="utf-8">
-    <title>Mehvix | 404</title>
-    <style>
-        :root {
-            --outside-bg-color: #c2ba00;
-            --inside-bg-color: #ffffff;
-        }
-    </style>
-</head>
+    <body>
+        <div class="box">
+            <div class="nav">
+                <a href="https://mehvix.com">~</a>/<a href="" class="inverse-bg"
+                    >404</a
+                >
+            </div>
 
-<body>
-    <div class="box">
-        <div class="nav">
-            <a href="https://mehvix.com">~</a>/<a href="" class="inverse-bg">404</a>
+            <p>
+                File not found. If you think this should exist, reach out to me
+                (my contact info is on the home page).
+            </p>
+
+            <h1 style="text-align: center">
+                <a href="https://mehvix.com">Return home.</a>
+            </h1>
+
+            <h1 style="text-align: center">
+                <a href="#" onClick="history.go(-1); return false;"
+                    >Previous page.</a
+                >
+            </h1>
+
+            <div id="footer">
+                BTC /
+                <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1"
+                    >15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a
+                ><br />
+                ETH /
+                <a href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74"
+                    >0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a
+                ><br />
+
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
         </div>
-
-        <p>File not found. If you think this should exist, reach out to me (my contact info is on the home page).
-
-        <h1 style="text-align: center"><a href="https://mehvix.com">Return home.</a></h1>
-
-        <h1 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h1>
-
-        <div id="footer">
-            BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-            ETH / <a
-                href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74">0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a><br>
-
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            - Max Vogel
-        </div>
-    </div>
-</body>
-
+    </body>
 </html>
