--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
         <script>
-            hljs.initHighlightingOnLoad();
+            hljs.initHighlightingOnLoad()
         </script>
         <script src="static/js/include.js"></script>
         <meta charset="utf-8" />
@@ -29,11 +29,11 @@
             }
 
             table.about > tbody > tr > td:nth-of-type(1)::before {
-                content: "- ";
+                content: '- ';
             }
 
             table.about > tbody > tr > td:nth-of-type(2)::before {
-                content: "    / ";
+                content: '    / ';
             }
 
             table.about {
@@ -53,8 +53,8 @@
         <script>
             function toggleImage() {
                 document
-                    .getElementById("toggleImage")
-                    .classList.toggle("hidden");
+                    .getElementById('toggleImage')
+                    .classList.toggle('hidden')
             }
 
             // window.onload = function () {
@@ -216,7 +216,7 @@
                 ><br />
 
                 <script>
-                    document.write(new Date().getFullYear());
+                    document.write(new Date().getFullYear())
                 </script>
                 - Max Vogel
             </div>
