--- a/mc.html
+++ b/mc.html
@@ -1,46 +1,59 @@
 <html lang="en">
+    <head>
+        <link type="text/css" rel="stylesheet" href="static/css/style.css" />
+        <link
+            type="text/css"
+            rel="stylesheet"
+            href="static/css/atom-one-dark-reasonable.css"
+        />
+        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+        <script>
+            hljs.initHighlightingOnLoad()
+        </script>
+        <script src="static/js/include.js"></script>
 
-<head>
-    <link type="text/css" rel="stylesheet" href="static/css/style.css">
-    <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
-    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    <script src="static/js/include.js"></script>
+        <meta charset="utf-8" />
+        <title>Mehvix | Projects</title>
+        <style>
+            :root {
+                --outside-bg-color: #8b4513;
+                --inside-bg-color: #cdd8df;
+            }
+        </style>
+    </head>
 
-    <meta charset="utf-8">
-    <title>Mehvix | Projects</title>
-    <style>
-        :root {
-            --outside-bg-color: #8B4513;
-            --inside-bg-color: #cdd8df;
-        }
-    </style>
-</head>
+    <body>
+        <div class="box">
+            <div class="nav">
+                <a href="../index.html">~</a>/<a href="./index.html">Server</a
+                >/<a href="" class="inverse-bg">mc</a>
+            </div>
 
-<body>
-    <div class="box">
-        <div class="nav">
-            <a href="../index.html">~</a>/<a href="./index.html">Server</a>/<a href="" class="inverse-bg">mc</a>
+            <code>mc.mehvix.com:25544</code><br /><br />
+            <video
+                style="width: 100%"
+                src="./static/media/synapsmc.webm"
+                controls
+                autoplay
+            >
+                Your browser does not support embedded video through HTML5 :(
+            </video>
+
+            <div id="footer">
+                BTC /
+                <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1"
+                    >15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a
+                ><br />
+                ETH /
+                <a href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74"
+                    >0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a
+                ><br />
+
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
         </div>
-
-
-        <code>mc.mehvix.com:25544</code><br><br>
-        <video style="width: 100%" src="./static/media/synapsmc.webm" controls autoplay>
-            Your browser does not support embedded video through HTML5 :(
-        </video>
-
-
-        <div id="footer">
-            BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-            ETH / <a
-                href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74">0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a><br>
-
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            - Max Vogel
-        </div>
-    </div>
-</body>
-
+    </body>
 </html>
