--- a/serverservices.html
+++ b/serverservices.html
@@ -1,34 +1,42 @@
 <html lang="en">
+    <head>
+        <link type="text/css" rel="stylesheet" href="static/css/style.css" />
+        <link
+            type="text/css"
+            rel="stylesheet"
+            href="static/css/atom-one-dark-reasonable.css"
+        />
+        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+        <script>
+            hljs.initHighlightingOnLoad()
+        </script>
+        <script src="static/js/include.js"></script>
 
-<head>
-    <link type="text/css" rel="stylesheet" href="static/css/style.css">
-    <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
-    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    <script src="static/js/include.js"></script>
+        <meta charset="utf-8" />
+        <title>Mehvix | Server</title>
+        <style>
+            :root {
+                --outside-bg-color: #2770c0;
+                --inside-bg-color: #e3e3e3;
+            }
+        </style>
+    </head>
 
-    <meta charset="utf-8">
-    <title>Mehvix | Server</title>
-    <style>
-        :root {
-            --outside-bg-color: #2770c0;
-            --inside-bg-color: #e3e3e3;
-        }
-    </style>
-</head>
+    <body>
+        <div class="box">
+            <div class="nav">
+                <a href="./index.html">~</a>/<a href="" class="inverse-bg"
+                    >Server</a
+                >
+            </div>
 
-<body>
-    <div class="box">
-        <div class="nav">
-            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Server</a>
-        </div>
+            <p>
+                <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well
+                as all other services, have moved to invite-only model. Please
+                do not contact me requesting an invite.
+            </p>
 
-        <p>
-            <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to
-            invite-only model. Please do not contact me requesting an invite.
-        </p>
-
-        <!--If you're interested in any of these or have any questions, my contact information is on the
+            <!--If you're interested in any of these or have any questions, my contact information is on the
     <a href="./index.html">home page</a>.
     ---
 
@@ -51,17 +59,21 @@
             the game servers I have experience configuring. If you are an experienced user I'll also give you the login
             credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
         </div>-->
-        <div id="footer">
-            BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-            ETH / <a
-                href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74">0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a><br>
+            <div id="footer">
+                BTC /
+                <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1"
+                    >15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a
+                ><br />
+                ETH /
+                <a href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74"
+                    >0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a
+                ><br />
 
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            - Max Vogel
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
